--- a/index.html
+++ b/index.html
@@ -8,14 +8,25 @@
   </head>
   <body>
     <header>
-      <h1>GH Pages Demo</h1>
-      <p>This is for study purpose only.</p>
+      <section>
+        <h1>GH Pages Demo</h1>
+        <p>This is for study purpose only.</p>
+      </section>
     </header>
     <main>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, nostrum?
-      </p>
+      <section>
+        <article>
+          <header>
+            <h2>This is lorem</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga,
+              nostrum?
+            </p>
+          </header>
+          <p>Some content</p>
+        </article>
+      </section>
     </main>
-    <footer></footer>
+    <footer>Nothing to see here ;)</footer>
   </body>
 </html>
